# definition_finder

./: .gitignore  CLAUDE.md  README.md  front_end_design.md  how_to_run.md
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: db.py  schema.py
backend/app/routes/: auth.py  documents.py  health.py  queries.py  query.py
backend/app/services/: auth.py  bm25.py  chunker.py  email.py  embed.py  highlight.py  ingest.py  prepare.py  retrieve.py  summarize.py  vectorstore.py
backend/app/utils/: sse.py  text.py
backend/scripts/: wipe_data.sh
frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthContext.tsx  LoginModal.tsx  RecentFilesDrawer.tsx  TopNav.tsx
frontend/components/process/: PipelineVisualizer.tsx  SnippetList.tsx
frontend/components/query/: QueryInput.tsx  SummaryCard.tsx
frontend/components/viewer/: DocumentViewer.tsx  HtmlViewer.tsx  PdfViewer.tsx
frontend/lib/: api.ts  auth.ts  types.ts
