[project]
name = "lexisai-backend"
version = "0.1.0"
description = "LexisAI Architect backend: Docling ingestion + hierarchical retrieval + streaming summarization."
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "docling>=2.0.0",
    "chromadb>=0.5.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rank-bm25>=0.2.2",
    "PyJWT>=2.9.0",
    "bcrypt>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
